# neat-libtorch

./: .gitignore  CMakeLists.txt  README.md  Rakefile  changelog
neat/: activations.cpp  activations.hpp  crossover.cpp  crossover.hpp  feed_forward.cpp  feed_forward.hpp  main.cpp  mutation.cpp  mutation.hpp  population.cpp  population.hpp  shared_helper.cpp  shared_helper.hpp  species.cpp  species.hpp  unit.cpp  unit.hpp  utils.cpp  utils.hpp
neat/experiments/: config.hpp
neat/genotype/: connection_gene.cpp  connection_gene.hpp  genome.cpp  genome.hpp  node_gene.cpp  node_gene.hpp
neat/phenotype/: feed_forward.cpp  feed_forward.hpp
sample/: system_info.cpp
